--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,14 @@ buildscript {
     addRepos(repositories)
 
     dependencies {
-        classpath deps.android_gradle_plugin
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath deps.kotlin.kotlin_gradle_plugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+    repositories {
+        google()
     }
 }
 
